// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker util getDateStrings returns date string 1`] = `"1,5,2020,1,1,2020,1,2,2020,1,0,2021"`;

exports[`DatePicker util getDaysOfMonth should match snapshot when week start day is Monday 1`] = `
Array [
  2019-12-29T13:00:00.000Z,
  2019-12-30T13:00:00.000Z,
  2019-12-31T13:00:00.000Z,
  2020-01-01T13:00:00.000Z,
  2020-01-02T13:00:00.000Z,
  2020-01-03T13:00:00.000Z,
  2020-01-04T13:00:00.000Z,
  2020-01-05T13:00:00.000Z,
  2020-01-06T13:00:00.000Z,
  2020-01-07T13:00:00.000Z,
  2020-01-08T13:00:00.000Z,
  2020-01-09T13:00:00.000Z,
  2020-01-10T13:00:00.000Z,
  2020-01-11T13:00:00.000Z,
  2020-01-12T13:00:00.000Z,
  2020-01-13T13:00:00.000Z,
  2020-01-14T13:00:00.000Z,
  2020-01-15T13:00:00.000Z,
  2020-01-16T13:00:00.000Z,
  2020-01-17T13:00:00.000Z,
  2020-01-18T13:00:00.000Z,
  2020-01-19T13:00:00.000Z,
  2020-01-20T13:00:00.000Z,
  2020-01-21T13:00:00.000Z,
  2020-01-22T13:00:00.000Z,
  2020-01-23T13:00:00.000Z,
  2020-01-24T13:00:00.000Z,
  2020-01-25T13:00:00.000Z,
  2020-01-26T13:00:00.000Z,
  2020-01-27T13:00:00.000Z,
  2020-01-28T13:00:00.000Z,
  2020-01-29T13:00:00.000Z,
  2020-01-30T13:00:00.000Z,
  2020-01-31T13:00:00.000Z,
  2020-02-01T13:00:00.000Z,
]
`;

exports[`DatePicker util getDaysOfMonth should match snapshot when week start day is Sunday 1`] = `
Array [
  2019-12-28T13:00:00.000Z,
  2019-12-29T13:00:00.000Z,
  2019-12-30T13:00:00.000Z,
  2019-12-31T13:00:00.000Z,
  2020-01-01T13:00:00.000Z,
  2020-01-02T13:00:00.000Z,
  2020-01-03T13:00:00.000Z,
  2020-01-04T13:00:00.000Z,
  2020-01-05T13:00:00.000Z,
  2020-01-06T13:00:00.000Z,
  2020-01-07T13:00:00.000Z,
  2020-01-08T13:00:00.000Z,
  2020-01-09T13:00:00.000Z,
  2020-01-10T13:00:00.000Z,
  2020-01-11T13:00:00.000Z,
  2020-01-12T13:00:00.000Z,
  2020-01-13T13:00:00.000Z,
  2020-01-14T13:00:00.000Z,
  2020-01-15T13:00:00.000Z,
  2020-01-16T13:00:00.000Z,
  2020-01-17T13:00:00.000Z,
  2020-01-18T13:00:00.000Z,
  2020-01-19T13:00:00.000Z,
  2020-01-20T13:00:00.000Z,
  2020-01-21T13:00:00.000Z,
  2020-01-22T13:00:00.000Z,
  2020-01-23T13:00:00.000Z,
  2020-01-24T13:00:00.000Z,
  2020-01-25T13:00:00.000Z,
  2020-01-26T13:00:00.000Z,
  2020-01-27T13:00:00.000Z,
  2020-01-28T13:00:00.000Z,
  2020-01-29T13:00:00.000Z,
  2020-01-30T13:00:00.000Z,
  2020-01-31T13:00:00.000Z,
]
`;

exports[`DatePicker util getDaysOfWeek should return days of week in correct order when start day is Monday 1`] = `
Array [
  Object {
    "longLabel": "Monday",
    "shortLabel": "M",
  },
  Object {
    "longLabel": "Tuesday",
    "shortLabel": "T",
  },
  Object {
    "longLabel": "Wednesday",
    "shortLabel": "W",
  },
  Object {
    "longLabel": "Thursday",
    "shortLabel": "T",
  },
  Object {
    "longLabel": "Friday",
    "shortLabel": "F",
  },
  Object {
    "longLabel": "Saturday",
    "shortLabel": "S",
  },
  Object {
    "longLabel": "Sunday",
    "shortLabel": "S",
  },
]
`;

exports[`DatePicker util getDaysOfWeek should return days of week in correct order when start day is Sunday 1`] = `
Array [
  Object {
    "longLabel": "Sunday",
    "shortLabel": "S",
  },
  Object {
    "longLabel": "Monday",
    "shortLabel": "M",
  },
  Object {
    "longLabel": "Tuesday",
    "shortLabel": "T",
  },
  Object {
    "longLabel": "Wednesday",
    "shortLabel": "W",
  },
  Object {
    "longLabel": "Thursday",
    "shortLabel": "T",
  },
  Object {
    "longLabel": "Friday",
    "shortLabel": "F",
  },
  Object {
    "longLabel": "Saturday",
    "shortLabel": "S",
  },
]
`;
